Merging with pubic repository